[package]
name = "usb-pd"
version = "0.1.0"
authors = ["Timo Kröger <timokroeger93@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4"
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32g431cb",
    "time-driver-tim4",
    "memory-x",
] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "generic-queue-8"] }
lilos = { version = "1.0.0-pre.0", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }

[patch.crates-io]
embassy-futures = { path = "../embassy/embassy-futures" }
embassy-sync = { path = "../embassy/embassy-sync" }
embassy-time = { path = "../embassy/embassy-time" }
embassy-stm32 = { path = "../embassy/embassy-stm32" }
lilos = { path = "../lilos/os" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
codegen-units = 1
debug = true
lto = "fat"
